  * debian/mono.links
    debian/mono.postinst
    + Removed, those are just left-overs.
  * debian/mono-jit.postinst:
    + Lowered alternative priority to 10 like all other alternative we install.
  * debian/control:
    + Moved cli-* Provides from mono-1.0-devel, mono-mcs and mono-gmcs to
      mono-devel, as thats where the cli-* alternatives now lives.
    + Added many stronged versioned binary dependencies to mono-devel as hack
      to make experimental buildds happy, else everything needing
      mono-devel >= 2.0 will FTBFS in experimental (e.g. KDE4).
      (thanks goes to Modestas Vainius for the investigation)

   [ David Paleino ]
   * debian/patches/fix_TcpClient_IPv6_r122598.dpatch:
     + Fix bug in TcpClient() implementation preventing IPv6 connections
       from working

 -- Mirco Bauer <meebey@debian.org>  Tue, 20 Jan 2009 21:53:21 +0100

mono (2.0.1-1) experimental; urgency=low

  [ Mirco Bauer ]
  * New upstream (bugfix) release.
  * debian/mono-1.0-devel.manpages:
    + Removed mcs1 as it's already shipped in mono-mcs.
  * debian/patches/99_autoreconf.dpatch:
    + Updated
  * debian/mono-devel.links:
    + Make csc a symlink to gmcs, a runtime version neutral default
      compiler.
  * debian/patches/armel_fix_configure_fpu_check.dpatch:
    + Forward ported patch from 1.2.4 to fix FTBFS on linux/armel.
  * debian/patches/99_autoreconf.dpatch:
    + Updated
  * debian/mono-common.install:
    + Name the /etc files and directories explicitly to make sure not to
      install /etc/mconfig by accident when doing a binary-indep binary-arch
      (in that order) build.

  [ Jo Shields ]
  * debian/patches/armel-glibc-2.8.dpatch:
    + Fix build failure on armel architecture on libc6 2.8 (Thanks
      to Michael Casadevall <sonicmctails@gmail.com> for the patch)

  [ David Paleino ]
  * Group Policy:
    + implemented get-orig-source target in debian/rules

 -- Mirco Bauer <meebey@debian.org>  Sun, 23 Nov 2008 16:16:00 +0100
