@@ -28,8 +28,8 @@ The program will look at .dll/.exe and .config files in your package, and
 will use the embedded dependency information to generate a dependency
 string on assembly and shared libs packages, including the setting of
 version ranges (as declared by the shlibs/clilibs files of the used
-packages). The dependency on a certain CLR (.NET runtime) version will be
-also added to the final variable.
+packages). The dependency on a certain CLR (Common Language Runtime)
+version will be also added to the final variable.
 
 Note: the dependencies on shared libraries may be not resolved correctly
 if there are no .config files associated with the the .exe/.dll file
@@ -86,7 +86,12 @@ or
 
 =cut
 
-init();
+init(options => {
+#  "d" => \$dh{D_FLAG},
+  "r" => \$dh{R_FLAG},
+  "l=s", => \$dh{L_PARAMS},
+  "internal-mono"  => \$dh{INTERNAL_MONO_FLAG},
+});
 
 my $clr;
 my $cli = '/usr/bin/cli';
@@ -127,7 +132,7 @@ if ($dh{L_PARAMS}) {
   $mono_path       = $ENV{'MONO_PATH'} if exists $ENV{'MONO_PATH'};
 }
 
-if (defined($ARGV[0]) && $ARGV[0] eq "internal-mono") {
+if (defined($dh{INTERNAL_MONO_FLAG})) {
     $clr = "mono";
     $cli_parser = "$pwd/debian/tmp/usr/bin/monodis";
     $cli_parser_paths = "LD_LIBRARY_PATH=$pwd/debian/tmp/usr/lib MONO_PATH=$mono_path:$pwd/debian/tmp/usr/lib/mono/1.0:$pwd/debian/tmp/usr/lib/mono/2.0 MONO_GAC_PREFIX=$mono_gac_prefix ";
@@ -270,11 +275,21 @@ foreach my $package (@{$dh{DOPACKAGES}}) {
       $vm_ref = "pnet-interpreter (>= $cli_version), ";
     }
   }
-    
+  
+  my $dh_ref = "";
   if (-f "$tmp/usr/share/cli-common/packages.d/$package.installcligac") {
-    $vm_ref .= "cli-common (>= 0.5.1), ";
+    # this package uses late GAC install, thus we need cli-common at package install time
+    if (-f "debian/cligacpolicy" || -f "debian/$package.cligacpolicy") {
+      # if this package uses dh_cligacpolicy then we need 0.5.4 for the policy-remove script in .postrm
+      # and 0.5.6 to get a working .postrm script (tried also to remove on purge)
+      $dh_ref = "cli-common (>= 0.5.6), ";
+    } else {
+      # we still need at least 0.5.1, as older versions silently missed installing policy files
+      $dh_ref = "cli-common (>= 0.5.1), ";
+    }
   }
-    
+  $vm_ref .= $dh_ref;
+  
     #$deps .= join(", ", "",
     #    sort {
     #        # beautify the sort order, requested by meebey
