@@ -22,17 +22,25 @@ mono (2.0.1-2) experimental; urgency=low
   * debian/control:
     + Moved cli-* Provides from mono-1.0-devel, mono-mcs and mono-gmcs to
       mono-devel, as thats where the cli-* alternatives now lives.
-    + Added many stronged versioned binary dependencies to mono-devel as hack
+    + Added many strong versioned binary dependencies to mono-devel as hack
       to make experimental buildds happy, else everything needing
       mono-devel >= 2.0 will FTBFS in experimental (e.g. KDE4).
       (thanks goes to Modestas Vainius for the investigation)
+    + Made dependency on libmono0, libmono-corlib2.0-cil and
+      libmono-corlib1.0-cil strong for mono-utils to ensure that the correct
+      versions are pulled in (else we might confuse APT or funny buildds).
+    + Bumped debhelper build-dep to >= 7.1, as needed for the bundled
+      debian/dh_* scripts.
+  * debian/dh_clideps
+    debian/dh_makeclilibs:
+    + Synced from cli-common 0.6.0, needed for dh 7.1 support.
 
    [ David Paleino ]
    * debian/patches/fix_TcpClient_IPv6_r122598.dpatch:
      + Fix bug in TcpClient() implementation preventing IPv6 connections
        from working
 
- -- Mirco Bauer <meebey@debian.org>  Tue, 20 Jan 2009 21:53:21 +0100
+ -- Mirco Bauer <meebey@debian.org>  Wed, 21 Jan 2009 23:39:02 +0100
 
 mono (2.0.1-1) experimental; urgency=low
 
